<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <repositories>
        <repository>
            <id>jitsi-maven-repository-releases</id>
            <layout>default</layout>
            <name>Jitsi Maven Repository (Releases)</name>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <url>https://github.com/jitsi/jitsi-maven-repository/raw/master/releases/</url>
        </repository>
    </repositories>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.igniterealtime.smack/smack-bosh -->
        <dependency>
            <groupId>org.igniterealtime.smack</groupId>
            <artifactId>smack-bosh</artifactId>
            <version>4.4.7</version>
        </dependency>

        <dependency>
            <groupId>org.jitsi</groupId>
            <artifactId>jitsi-xmpp-extensions</artifactId>
            <version>1.0-78-g62d03d4</version>
        </dependency>
        <dependency>
            <groupId>org.igniterealtime.smack</groupId>
            <artifactId>smack-java8</artifactId>
            <version>4.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.igniterealtime.smack</groupId>
            <artifactId>smack-tcp</artifactId>
            <version>4.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.igniterealtime.smack</groupId>
            <artifactId>smack-im</artifactId>
            <version>4.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.igniterealtime.smack</groupId>
            <artifactId>smack-extensions</artifactId>
            <version>4.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_2.13</artifactId>
            <version>3.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.jitsi.desktop</groupId>
            <artifactId>service-protocol</artifactId>
            <version>2.14.77b1f5e65</version>
        </dependency>
        <dependency>
            <groupId>org.jitsi</groupId>
            <artifactId>jicoco</artifactId>
            <version>1.1-129-g23ac61c</version>
        </dependency>
        <dependency>
            <groupId>org.igniterealtime.smack</groupId>
            <artifactId>smack-extensions</artifactId>
            <version>4.4.6</version>
        </dependency>
    </dependencies>
    <groupId>org.example</groupId>
    <artifactId>Jicofo-KMS-Bridge</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
</project>
